# mossie_497

./: .gitignore  README.md  create_user.py  create_user.sql  hypothetical_bugs.txt  index.html  journal.html  mood.html  pet.html  pets.html  pyproject.toml  recipes.html  run.py  run_flask.py  test_case_descriptions.txt  travel.html
css/: html5reset.css  style.css
js/: images.js
mossie/: __init__.py  config.py  model.py
mossie/templates/: index.html
mossie/views/: __init__.py  index.py
old_mossie/: index.html  journal.html
old_mossie/css/: style.css
temp/: README.md  __init__.py  app.py  extended_views.py  features.py  models.py  models_journal.py  models_mood.py  models_pet.py  models_settings.py  mossie.db  requirements.txt  schema.sql  setup.py  views.py
temp/static/css/: style.css
temp/templates/: dashboard.html  login.html  register.html  reset_password.html  reset_request.html
temp/templates/features/: journal_edit.html  journal_list.html  journal_view.html  mood_tracking.html  pet.html  settings.html
tests/: README.md  conftest.py  requirements_test.txt  test_auth.py
